--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\Mayank\\\\Desktop\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +20,7 @@
        "'c:\\\\Users\\\\Mayank\\\\Desktop\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +41,14 @@
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
-    "    source_url: str\n",
+    "    source_URL: str\n",
     "    local_data_file: Path\n",
     "    unzip_dir: Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +66,7 @@
     "    def __init__(\n",
     "        self,\n",
     "        config_filepath = CONFIG_FILE_PATH,\n",
-    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "        params_filepath = PARAMS_FILE_PATH,**kwargs):\n",
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
@@ -111,7 +82,7 @@
     "\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            source_URL=config.Source_URL,\n",
+    "            source_URL=config.source_URL,\n",
     "            local_data_file=config.local_data_file,\n",
     "            unzip_dir=config.unzip_dir \n",
     "        )\n",
@@ -121,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,10 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class DataIngestion:\n",
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
@@ -174,35 +146,48 @@
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path, exist_ok=True)\n",
     "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)\n"
+    "            zip_ref.extractall(unzip_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-25 12:06:27,878:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-11-25 12:06:27,885:INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-25 12:06:27,890:INFO:common:created directory at: artifacts]\n",
-      "[2023-11-25 12:06:27,895:INFO:common:created directory at: artifacts/data_ingestion]\n"
+      "[2023-11-25 12:39:42,961:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-11-25 12:39:42,966:INFO:common:yaml file: params.yaml loaded successfully]\n",
+      "[2023-11-25 12:39:42,970:INFO:common:created directory at: artifacts]\n",
+      "[2023-11-25 12:39:42,973:INFO:common:created directory at: artifacts/data_ingestion]\n",
+      "[2023-11-25 12:39:42,976:INFO:1060046524:Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'source_URL'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Mayank\\Desktop\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\01_data_ingestion.ipynb Cell 10\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     data_ingestion\u001b[39m.\u001b[39mextract_zip_file()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
-      "\u001b[1;32mc:\\Users\\Mayank\\Desktop\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\01_data_ingestion.ipynb Cell 10\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     config \u001b[39m=\u001b[39m ConfigurationManager()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     data_ingestion_config \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39;49mget_data_ingestion_config()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     data_ingestion \u001b[39m=\u001b[39m DataIngestion(config\u001b[39m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     data_ingestion\u001b[39m.\u001b[39mdownload_file()\n",
-      "\u001b[1;32mc:\\Users\\Mayank\\Desktop\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\01_data_ingestion.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m config \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39mdata_ingestion\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m create_directories([config\u001b[39m.\u001b[39mroot_dir])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m data_ingestion_config \u001b[39m=\u001b[39m DataIngestionConfig(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     root_dir\u001b[39m=\u001b[39;49mconfig\u001b[39m.\u001b[39;49mroot_dir,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     source_URL\u001b[39m=\u001b[39;49mconfig\u001b[39m.\u001b[39;49msource_URL,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     local_data_file\u001b[39m=\u001b[39;49mconfig\u001b[39m.\u001b[39;49mlocal_data_file,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     unzip_dir\u001b[39m=\u001b[39;49mconfig\u001b[39m.\u001b[39;49munzip_dir \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Mayank/Desktop/Kidney-Disease-Classification-Deep-Learning-Project/research/01_data_ingestion.ipynb#X10sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mreturn\u001b[39;00m data_ingestion_config\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'source_URL'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (uriginal): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
+      "From (redirected): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=bb32d338-5b7b-48f7-b32b-2837dbc992fd\n",
+      "To: c:\\Users\\Mayank\\Desktop\\Kidney-Disease-Classification-Deep-Learning-Project\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 57.7M/57.7M [02:07<00:00, 452kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-11-25 12:41:55,247:INFO:1060046524:Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
